2005-06-13  Mark Mitchell  <mark@codesourcery.com>

	* qm/remote_host.py: Rename to ...
	* qm/host.py: ... this.  Replace "RemoteHost" with "Host"
	throughout.
	* qm/test/base.py: Adjust accordingly.
	* qm/test/classes/classes.qmc: Likewise.
	* qm/test/classes/compiler_table.py: Likewise.
	* qm/test/classes/local_host.py: Likewise.

2005-06-10  Mark Mitchell  <mark@codesourcery.com>

	* qm/remote_host.py: New file.
	* qm/test/base.py (__extension_bases): Add "remote_host".
	(extension_kinds): Derive automatically from __extension_base.
	* qm/test/classes/classes.qmc: Add local_host.LocalHost,
	ssh_host.SSHHost, ssh_host.RSHHost, and simulator.Simulator.
	* qm/test/classes/compiler.py (Compiler.GetExecutableExtension):
	New method.
	(Compiler.GetObjectExtension): Likewise.
	* qm/test/classes/compiler_table.py (CompilerTable.Setup): Fix
	typos and thinkos.  Set up CompilerTable.target.
	* qm/test/classes/compiler_test.py (CompiledExecutable): Remove.
	(CompilerTest._GetObjectFileName): Fix typo in comment.
	(CompilerTest.Run): Save the compiler.
	(CompilerTest._RunExecutable): Use the RemoteHost provided by the
	compiler table.
	* qm/test/classes/local_host.py: New file.
	* qm/test/classes/simulator.py: Likewise.
	* qm/test/classes/ssh_host.py: Likewise.

	* qm/test/cmdline.py (QMTest.__ExecuteRegister): Use
	__CheckExtensionKind. 

	* qm/test/result.py (Result.NoteException): Quote exception
	string. 

	* qm/extension.py (Extension.Type.__init__): Fix overlong lines.
	(make_dom_element): Fix typo in comment.

2005-06-06  Stefan Seefeld  <stefan@codesourcery.com>

	* setup.py: Move data into <prefix>/share/qm.
	* qm/__init__.py: Likewise.
	* qmdist/command/install_data.py: Likewise.
	* MANIFEST.in: Cleanup.
	* Makefile: Removed.
	* configure: Removed.
	* configure.in: Removed.
	* qm/test/classes/compiler.py: Bugfix and cleanup.

2005-06-01  Mark Mitchell  <mark@codesourcery.com>

        Test documentation generation again.
